Added 2015 cleaned dataset

--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -1004,7 +1004,64 @@
     "clean_2004_2.columns = ROWS_N\n",
     "#37 pages left\n",
     "\n",
-    "#2005"
+    "#2005\n",
+    "\n",
+    "# 2015\n",
+    "# Clean the 2015_page_1\n",
+    "clean_2015_1 = largest_2015_1\n",
+    "clean_2015_1 = clean_2015_1.drop(0)\n",
+    "clean_2015_1.columns = ROWS_N\n",
+    "clean_2015_1['ORIGIN_DPT'] = clean_2015_1['BURNED_TOTAL']\n",
+    "clean_2015_1['BURNED_TOTAL'] = clean_2015_1['VEG_TYPE']\n",
+    "clean_2015_1['VEG_TYPE'] = clean_2015_1['STRUCT_DEST']\n",
+    "clean_2015_1['CAUSE'] = clean_2015_1['STRUCT_DAM']\n",
+    "clean_2015_1 = column_separator(clean_2015_1, \"FATALITY_FIRE\", STRUCT_ROW)\n",
+    "clean_2015_1['FATALITY_FIRE'] = np.nan\n",
+    "# Reorder the columns\n",
+    "clean_2015_1 = clean_2015_1.reindex(columns=ROWS_N)\n",
+    "# Refill missing data (Some values lost during column separation)\n",
+    "clean_2015_1.iloc[3, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 2\n",
+    "clean_2015_1.iloc[11, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 16\n",
+    "clean_2015_1.iloc[13, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 7\n",
+    "clean_2015_1.iloc[15, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 27\n",
+    "clean_2015_1.iloc[17, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 1\n",
+    "clean_2015_1.iloc[18, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 1\n",
+    "clean_2015_1.iloc[20, clean_2015_1.columns.get_loc('STRUCT_DEST')] = 965\n",
+    "\n",
+    "# Clean the 2015_page_2 \n",
+    "clean_2015_2 = largest_2015_2.drop(0)\n",
+    "clean_2015_2.columns = ROWS_N\n",
+    "clean_2015_2['ORIGIN_DPT'] = clean_2015_2['BURNED_TOTAL']\n",
+    "clean_2015_2['BURNED_TOTAL'] = clean_2015_2['VEG_TYPE']\n",
+    "clean_2015_2['VEG_TYPE'] = clean_2015_2['STRUCT_DEST']\n",
+    "clean_2015_2['CAUSE'] = clean_2015_2['STRUCT_DAM']\n",
+    "clean_2015_2 = column_separator(clean_2015_2, \"FATALITY_FIRE\", STRUCT_ROW)\n",
+    "clean_2015_2['FATALITY_FIRE'] = clean_2015_2['FATALITY_CIVIL']\n",
+    "# Reorder the columns\n",
+    "clean_2015_2 = clean_2015_2.reindex(columns=ROWS_N)\n",
+    "# Crosschecking dataframe data manually\n",
+    "clean_2015_2['FATALITY_CIVIL'] = np.nan\n",
+    "clean_2015_2.iloc[6, clean_2015_2.columns.get_loc('STRUCT_DEST')] = 4\n",
+    "clean_2015_2.iloc[8, clean_2015_2.columns.get_loc('STRUCT_DAM')] = 1\n",
+    "# Fill columns 14-18 with right values for STRUCT_DEST column\n",
+    "clean_2015_2.iloc[14:19, clean_2015_2.columns.get_loc('STRUCT_DEST')] = largest_2015_2['Structures'][15:20]\n",
+    "\n",
+    "# Clean the 2015_page_3\n",
+    "# Note do we keep TOTAL?\n",
+    "clean_2015_3 = largest_2015_3.drop(0)\n",
+    "# Drop the total row\n",
+    "clean_2015_3 = clean_2015_3.drop(8)\n",
+    "clean_2015_3.columns = ROWS_N\n",
+    "clean_2015_3['ORIGIN_DPT'] = clean_2015_3['BURNED_TOTAL']\n",
+    "clean_2015_3['BURNED_TOTAL'] = clean_2015_3['VEG_TYPE']\n",
+    "clean_2015_3['VEG_TYPE'] = clean_2015_3['STRUCT_DEST']\n",
+    "clean_2015_3['CAUSE'] = clean_2015_3['STRUCT_DAM']\n",
+    "clean_2015_3 = column_separator(clean_2015_3, \"FATALITY_FIRE\", STRUCT_ROW)\n",
+    "clean_2015_3['FATALITY_FIRE'] = np.nan\n",
+    "# Reorder the columns\n",
+    "clean_2015_3 = clean_2015_3.reindex(columns=ROWS_N)\n",
+    "clean_2015_3.iloc[1, clean_2015_3.columns.get_loc('STRUCT_DEST')] = 3\n",
+    "\n"
    ]
   },
   {
