--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -10,7 +10,7 @@
     "    1)Vincent Bensawan A14778583\n",
     "    2)Kyle Gillaspy A15010717\n",
     "    3)Oscar Jimenez A15089826\n",
-    "    4)Sayaka Kuwayama A\n",
+    "    4)Sayaka Kuwayama A13443139\n",
     "    5)Ritaj Mangush A14251679\n",
     "    6)Nancy Nguyen A13708655\n",
     "## Introduction and Background\n",
@@ -51,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"map.pdf\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -69,7 +76,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2237fcad9e8>"
+       "<IPython.lib.display.IFrame at 0x1ef1295da20>"
       ]
      },
      "execution_count": 1,
@@ -79,7 +86,7 @@
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "IFrame(\"./map.html\", width=1000, height=500)"
+    "IFrame(\"./map.html\", width='1000', height='500')"
    ]
   },
   {
