--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -51,15 +51,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"map.pdf\">"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -67,26 +60,26 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"500\"\n",
-       "            src=\"./map.html\"\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\".\\map.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ef1295da20>"
+       "<IPython.lib.display.IFrame at 0x297023247b8>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "IFrame(\"./map.html\", width='1000', height='500')"
+    "IFrame(\".\\map.html\", width='100%', height='800')"
    ]
   },
   {
