Added minor addition to lin regress section

--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -3805,18 +3805,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6109865470852017"
+       "'F2 results found: '"
       ]
      },
-     "execution_count": 51,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Bayes score: 0.6153846153846153, KNN score: 0.6180709534368071Tree score: 0.6109865470852017, Forest score: 0.6138392857142858'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3825,7 +3833,8 @@
     "tree_score = f2_score(sklearn.metrics.confusion_matrix(guess_tree, y_yest))\n",
     "forest_score = f2_score(sklearn.metrics.confusion_matrix(guess_forest, y_yest))\n",
     "\n",
-    "tree_score"
+    "display(\"F2 results found: \")\n",
+    "display(\"Bayes score: \" + str(bayes_score) + \", KNN score: \" + str(knn_score) + \"Tree score: \" + str(tree_score) + \", Forest score: \" + str(forest_score))"
    ]
   },
   {
