Reverted a previous r-val and p-val addition

--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -3563,7 +3563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3578,7 +3578,7 @@
     {
      "data": {
       "text/plain": [
-       "'County Name: Lake County, Slope: 708.1906969309462, R-squared: 0.34121969699105437, P-val: 0.19587230072780693'"
+       "'County Name: Lake County, Slope: 708.1906969309462'"
       ]
      },
      "metadata": {},
@@ -3587,7 +3587,7 @@
     {
      "data": {
       "text/plain": [
-       "'County Name: Amador County, Slope: 1205.1355498721227, R-squared: 0.3480827343933889, P-val: 0.18644757627887404'"
+       "'County Name: Amador County, Slope: 1205.1355498721227'"
       ]
      },
      "metadata": {},
@@ -3596,7 +3596,7 @@
     {
      "data": {
       "text/plain": [
-       "'County Name: Siskiyou County, Slope: 1507.1474531116799, R-squared: 0.3512370620280848, P-val: 0.1822174589248658'"
+       "'County Name: Siskiyou County, Slope: 1507.1474531116799'"
       ]
      },
      "metadata": {},
@@ -3605,7 +3605,7 @@
     {
      "data": {
       "text/plain": [
-       "'County Name: Tuolumne County, Slope: 1701.6643222506393, R-squared: 0.27083361368350567, P-val: 0.31030483109753226'"
+       "'County Name: Tuolumne County, Slope: 1701.6643222506393'"
       ]
      },
      "metadata": {},
@@ -3614,7 +3614,7 @@
     {
      "data": {
       "text/plain": [
-       "'County Name: Fresno County, Slope: 2880.167471227621, R-squared: 0.39218694491543543, P-val: 0.1329803342002132'"
+       "'County Name: Fresno County, Slope: 2880.167471227621'"
       ]
      },
      "metadata": {},
@@ -3677,7 +3677,7 @@
     "\n",
     "display(\"The 5 Counties with the largest slopes:\")\n",
     "for tuple in best_tuples:\n",
-    "    res_str = \"County Name: \" + str(tuple[0]) + \", Slope: \" + str(tuple[1]) + \", R-squared: \" + str(tuple[3]) + \", P-val: \" + str(tuple[4])\n",
+    "    res_str = \"County Name: \" + str(tuple[0]) + \", Slope: \" + str(tuple[1]) \n",
     "    display(res_str)\n"
    ]
   },
@@ -3688,7 +3688,7 @@
     "### Explanation\n",
     "In the graph above, we tried to examine the relationship between burned total acres and year and then we try to predict the average burned total acres for every county. We took the average of the total acres burned for every county every year and did a linear regression on those data. The graph shown above is made from the 5 counties whose linear regression is within the Top 5 of other slopes.  \n",
     "\n",
-    "The graph above produces positive slopes, which seems to suggest that the 5 counties presented above are increasingly more vulnerable to forest fires as the year goes. However, the p-values obtained from the regression suggests that the null hypothesis is not rejected, which means there is no significant relationship between burned total and time(year)."
+    "The graph above produces positive slopes, which seems to suggest that the 5 counties presented above are increasingly more vulnerable to forest fires as the year goes. "
    ]
   },
   {
