Kyle G: Added explanation and conclusion

--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -28,9 +28,8 @@
     "The goal is to have communities with emergency plans and preparations ready in these “high risk” areas.\n",
     "\n",
     "\n",
-    "3) **Hypothesis: **\n",
-    "\n",
-    "# **TODO**"
+    "3) **Hypothesis:**  \n",
+    "We hypothesize that counties with more acres burned and more fatalities to require more resources."
    ]
   },
   {
@@ -3084,6 +3083,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation:**  \n",
+    "Based on the numbers so far, nothing really jumps out. This lead to the idea of normalization. The following graph is   a normalized kde plot of the length of a fire and the total acres burned. We can see that the plots align, signaling   we may want to be looking more into fire frequency rather than length, since a there is a higher probability that a fire's burntime does not correlate to its total acres burned, we may want to look elsewhere to test our hypothesis. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -3128,6 +3135,14 @@
     "new_df = new_df.groupby(['years', 'cats']).count().reset_index()\n",
     "new_df = new_df[new_df['years'] < 2017.0]\n",
     "sns.barplot(x='years',y='count', hue='cats', data=new_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation:**  \n",
+    "Here we move past the kde plot and visualize the total acres burned based on when the fires began, first by year, then by day. There are some interesting finds on this data, however we need to move to something more concrete, perhaps occurrance per county per year?"
    ]
   },
   {
@@ -3871,8 +3886,15 @@
    "source": [
     "# **RESULTS AND CONCLUSION**\n",
     "\n",
-    "Based on our findings, we can conclude that "
+    "With an f2 score of .61, we can safely assume that while our hypothesis seemed to be heading in the right direction, we need more data to conclude our hypothesis is true. While this f2 score is better than our initial predictive models which used economic data and attempted to connect acres burned to dollar amount of damage, we still cannot make any prediction about where to definitively allocate resources to mitigate future fires and damages. However, with our data we were able to eliminate many preconceived notions that the public may have about fires. For example, there was no correlation found between vegetation type and fire frequency, nor fire length and fire damage in terms of acres burned and structural damage. If we were to create an ideal dataset on which to conduct this research, as opposed to resorting to PDF scraping using Tabula, it would include all fires instead of only the largest fires per year, as well as data for resources used by county and departments per county. Overall we believe that our findings are very interesting and with the right data set, our predictive model could be slightly changed to effectively allocate firefighting resources."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
