--- a/Coding_Notebook.ipynb
+++ b/Coding_Notebook.ipynb
@@ -2890,6 +2890,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explanation:**  \n",
+    "Based on the numbers so far, nothing really jumps out. This lead to the idea of normalization. The following graph is   a normalized kde plot of the length of a fire and the total acres burned. We can see that the plots align, signaling   we may want to be looking more into fire frequency rather than length, since a there is a higher probability that a fire's burntime does not correlate to its total acres burned, we may want to look elsewhere to test our hypothesis. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -3004,11 +3012,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Explanation:**  \n",
+    "Here we move past the kde plot and visualize the total acres burned based on when the fires began, first by year, then by day. There are some interesting finds on this data, however we need to move to something more concrete, perhaps occurrance per county per year?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3045,7 +3054,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3080,14 +3091,6 @@
     "#This seemingly shows that the number of fires is on the decline, however\n",
     "#if we look to the total number of acres burned, we see that fire frequency\n",
     "#does not tell the whole story"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Explanation:**  \n",
-    "Based on the numbers so far, nothing really jumps out. This lead to the idea of normalization. The following graph is   a normalized kde plot of the length of a fire and the total acres burned. We can see that the plots align, signaling   we may want to be looking more into fire frequency rather than length, since a there is a higher probability that a fire's burntime does not correlate to its total acres burned, we may want to look elsewhere to test our hypothesis. "
    ]
   },
   {
@@ -3135,14 +3138,6 @@
     "new_df = new_df.groupby(['years', 'cats']).count().reset_index()\n",
     "new_df = new_df[new_df['years'] < 2017.0]\n",
     "sns.barplot(x='years',y='count', hue='cats', data=new_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Explanation:**  \n",
-    "Here we move past the kde plot and visualize the total acres burned based on when the fires began, first by year, then by day. There are some interesting finds on this data, however we need to move to something more concrete, perhaps occurrance per county per year?"
    ]
   },
   {
